# ryu-mail

./: README.md  manifest.json
.github/workflows/: canary.yml  nightly.yml  release.yml
backend/: Cargo.toml
backend/src/: api.rs  email.rs  main.rs  mime.rs  paths.rs  send.rs  store.rs
